cmake_minimum_required(VERSION 3.16)
project (mytest)
#add_executable (mytest main.cpp)
#target_link_libraries(mytest PUBLIC mylib)
#target_link_directories(mytest PUBLIC mylib/build)
#target_include_directories(mytest PUBLIC mylib/include)
add_subdirectory(mylib)
add_executable (mytest main.cpp)
target_link_libraries(mytest PUBLIC mylib)